# c-plus-plus-for-creators-robotics-practical-7-6

./: CMakeLists.txt  README.md
exe/: CMakeLists.txt
exe/libs/matrixlib/: export_shared.h
exe/src/: test_shared_matrix.cpp
src/: export.h  matrix.cpp  matrix.h
src/c/: c_api.cpp  c_api.h
